create api to return contract hash
